package org.codeme.thinking.in.java.thread.battle.city;

import java.awt.*;

/**
 * 炮弹
 * <p>创建时间: 2022/11/23 </p>
 *
 * @author <a href="mailto:jiangliu0316@outlook.com" rel="nofollow">codeme</a>
 * @since
 */
public class DefaultShell extends AbstractShell {

}
