package org.codeme.thinking.in.java.thread.battle.city;

/**
 * TODO
 * <p>创建时间: 2022/11/23 </p>
 *
 * @author <a href="mailto:jiangliu0316@outlook.com" rel="nofollow">codeme</a>
 * @since
 */
public enum Direction {
    UP,
    DOWN,
    LEFT,
    RIGHT
}

