@startuml
'https://plantuml.com/class-diagram
class JPanel {
    void paint(Graphics);
}
interface KeyListener {
    void keyPressed(KeyEvent)
}
class Battlefield extends JPanel implements KeyListener {
    -List<AbstractTank> tanks;

    +void drawTank();//绘制坦克
    +void drawShell();//绘制炮弹
}

class AbstractTank {
   -Direction direction;
   -boolean live;
   -Color color;
   -int x;
   -int y;
   -int width;
   -int height;
   +void fire();
   +void move();
   +AbstractTank build();//构建坦克
}

class AbstractSell {
   -Direction direction;
   -int x;
   -int y;
   -int width;
   -int height;
   -boolean live;
   -String owner;
   +AbstractSell build();//构建炮弹
}

class Player extends AbstractTank{

}
class EnemyTank extends AbstractTank{

}
class DefaultShell extends AbstractSell{}

AbstractTank --> AbstractSell: 发射

Battlefield --> Player: 1
Battlefield --> EnemyTank: N
Battlefield --> DefaultShell: N


'方向
enum Direction {
    UP
    DOWN
    LEFT
    RIGHT
}

@enduml